Create stubs of the Twitch pages

--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,10 @@ nav:
   - CatCupcakes
 - Goals
 - Shop: https://www.redbubble.com/people/devicatoutlet/shop/
+- Twitch:
+  - Streaming Tips
+  - Computer Specs
+  - CCB, Giveaways, MM
+  - Twitch Sub Benefits
 - Gratitude Board
 - About
