Rename Twitch tips page

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ nav:
 - Goals
 - Shop: https://www.redbubble.com/people/devicatoutlet/shop/
 - Twitch:
-  - Streaming Tips
+  - Beginner Tips
   - Computer Specs
   - CCB, Giveaways, MM
   - Twitch Sub Benefits
