Rename CCB info page to Channel Info in menu

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ nav:
 - Twitch:
   - Beginner Tips
   - Computer Specs
-  - CCB, Giveaways, MM
+  - Channel Info
   - Twitch Sub Benefits
 - Gratitude Board
 - About
