Rearrange Twitch Menu
Rearrange Twitch Menu in new order: Channel Info, Computer Specs, Streaming Tips, Sub Benefits.

--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ nav:
 - Goals
 - Shop: https://www.redbubble.com/people/devicatoutlet/shop/
 - Twitch:
-  - Beginner Tips
-  - Computer Specs
   - Channel Info
-  - Twitch Sub Benefits
+  - Computer Specs
+  - Streaming Tips
+  - Sub Benefits
 - Gratitude Board
 - About
 - Contact
