Update Characters Menu
Add pets to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ nav:
   - Rin
   - DapperCat
   - CatCupcakes
+  - Pets
 - Goals
 - Shop: https://www.redbubble.com/people/devicatoutlet/shop/
 - Twitch:
