--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 nav:
-- Gallery
 - Art Tips
 - Characters:
   - Momoko
@@ -10,12 +9,15 @@ nav:
   - DapperCat
   - CatCupcakes
   - Pets
+- Gallery
 - Goals
+- Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: https://www.redbubble.com/people/devicatoutlet/shop/
 - Twitch:
   - Channel Info
   - Computer Specs
   - Streaming Tips
   - Sub Benefits
+- YouTube: https://www.youtube.com/devicattv/
 - About
 - Contact
