Begin collecting all of CCB's quotes

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ nav:
   - Computer Specs
   - Streaming Tips
   - Sub Benefits
+  - Quotes
 - YouTube: https://www.youtube.com/devicattv/
 - About
 - Contact
