Update other shop link

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ nav:
 - Gallery
 - Goals
 - Patreon: https://www.patreon.com/devicatoutlet/
-- Shop: https://www.redbubble.com/people/devicatoutlet/shop/
+- Shop: http://bit.ly/DeviCatShop
 - Twitch:
   - Channel Info
   - Computer Specs
