--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ nav:
   - CatCupcakes
   - Pets
 - Gallery
-- Goals
+- Goals / Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: http://bit.ly/DeviCatShop
 - Twitch:
@@ -20,6 +20,5 @@ nav:
   - Streaming Tips
   - Sub Benefits
   - Quotes
-- YouTube: https://www.youtube.com/devicattv/
 - About
 - Contact
