Update Header Name

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ nav:
   - CatCupcakes
   - Pets
 - Gallery
-- Goals / Milestones
+- Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: http://bit.ly/DeviCatShop
 - Twitch:
