Update Character Menu
Re-organize order of character menu

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 nav:
 - Art Tips
 - Characters:
+  - Candy Cat Twins
+  - CatCupcakes
+  - DapperCat
+  - Hanabi
   - Momoko
-  - Shizuko
+  - Pets
   - Reiko
   - Rin
-  - BonBon Chan & CandiCat
-  - Hanabi
-  - DapperCat
-  - CatCupcakes
-  - Pets
+  - Shizuko
 - Gallery
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
