Update Characters Pages
Update order of characters. Edit bonbon chan link to be for new candycattwins link. Remove pets link.

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,6 @@
 nav:
 - Art Tips
-- Characters:
-  - Candy Cat Twins
-  - CatCupcakes
-  - DapperCat
-  - Hanabi
-  - Momoko
-  - Pets
-  - Reiko
-  - Rin
-  - Shizuko
+- Characters
 - Gallery
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
