--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 nav:
 
+- About
 - Characters
 - Gallery
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: http://bit.ly/DeviCatShop
-- About
-- Contact
+- YouTube: https://youtube.com/DeviCatTV
+
