Update milestones / shop links

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ nav:
 - Gallery
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
-- Shop: http://bit.ly/DeviCatShop
+- Shop: https://devicatoutlet.redbubble.com
 - YouTube: https://youtube.com/DeviCatTV
 
