--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 nav:
 
-- About
+- About | Contact
 - Characters
 - Gallery
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: https://devicatoutlet.redbubble.com
+- Twitch: https://twitch.tv/devicat
 - YouTube: https://youtube.com/DeviCatTV
 
