--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ nav:
 
 - About | Contact: https://devicatoutlet.com/about
 - Characters
-- Gallery
+- Art Gallery: https://instagram.com/devicatart
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: https://devicatoutlet.redbubble.com
