--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 nav:
 
 - About | Contact: https://devicatoutlet.com/about
-- Art Gallery: https://instagram.com/devicatart
-- Characters
+- Mascots
+- Gallery: https://instagram.com/devicatart
 - Milestones
 - Patreon: https://www.patreon.com/devicatoutlet/
 - Shop: https://devicatoutlet.redbubble.com
