--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ nav:
 
 - About | Contact: https://devicatoutlet.com/about
 - Gallery: https://instagram.com/devicatart
-- Milestones
-- Patreon: https://www.patreon.com/devicatoutlet/
 - Mascots
 - Shop: https://devicatoutlet.redbubble.com
+- Socials
+- TikTok: https://www.tiktok.com/@devicattv
 - Twitch: https://twitch.tv/devicat
 - YouTube: https://youtube.com/DeviCatTV
 
