--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 nav:
 
-- About | Contact: https://devicatoutlet.com/about
+- About: https://devicatoutlet.com/about
 - Gallery: https://instagram.com/devicatart
 - Mascots
 - Shop: https://devicatoutlet.redbubble.com
