Update all socials

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 nav:
 
 - About: https://devicatoutlet.com/about
-- Gallery: https://instagram.com/devicatart
+- Gallery: https://instagram.com/devicatoutlet
 - Mascots
 - Shop: https://devicatoutlet.redbubble.com
-- Socials
-- TikTok: https://www.tiktok.com/@devicattv
+- Socials: https://devicatoutlet.com/socials
+- TikTok: https://www.tiktok.com/@devicatart
 - Twitch: https://twitch.tv/devicat
-- YouTube: https://youtube.com/DeviCatTV
 
