Character Pages / Links
Remove character pages. Update header links to match socials. Update image,  link and description for shop on front page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 nav:
 
 - About: https://devicatoutlet.com/about
-- Gallery: https://instagram.com/devicatoutlet
-- Mascots
-- Shop: https://devicatoutlet.redbubble.com
-- Socials: https://devicatoutlet.com/socials
+- Instagram: https://instagram.com/devicatoutlet
+- Patreon: https://patreon.com/devicatoutlet
+- RedBubble: https://devicatoutlet.redbubble.com
 - TikTok: https://www.tiktok.com/@devicatart
 - Twitch: https://twitch.tv/devicat
+- Twitter: https://twitter.com/devicatoutlet
 
