Update Discord Link
Update discord link in header.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 nav:
 
 - About: https://devicatoutlet.com/about
-- Discord: https://discord.com/invite/devicat
+- Discord: https://discord.gg/devicat
 - Instagram: https://instagram.com/devicatoutlet
 - Patreon: https://patreon.com/devicatoutlet
 - RedBubble: https://devicatoutlet.redbubble.com
