--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ nav:
 - Instagram: https://instagram.com/devicatoutlet
 - Patreon: https://patreon.com/devicatoutlet
 - RedBubble: https://devicatoutlet.redbubble.com
-- TikTok: https://www.tiktok.com/@devicatart
+- TikTok: https://www.tiktok.com/@devicatoutlet
 - Twitch: https://twitch.tv/devicat
 - Twitter: https://twitter.com/devicatoutlet
 
