--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ nav:
 - TikTok: https://www.tiktok.com/@devicatoutlet
 - Twitch: https://twitch.tv/devicat
 - Twitter: https://twitter.com/devicatoutlet
+- YouTube: https://youtube.com/c/devicatoutlet
 
