--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 nav:
 
-- About: https://devicatoutlet.com/about
-- Discord: https://discord.gg/devicat
-- Instagram: https://instagram.com/devicatoutlet
-- Patreon: https://patreon.com/devicatoutlet
-- RedBubble: https://devicatoutlet.redbubble.com
-- TikTok: https://www.tiktok.com/@devicatoutlet
-- Twitch: https://twitch.tv/devicat
-- Twitter: https://twitter.com/devicatoutlet
-- YouTube: https://youtube.com/c/devicatoutlet
+- DeviCat: https://devicatoutlet.com/about
+- CandiCat: https://devicatoutlet.com/about
+- Gallery: https://devicatoutlet.com/gallery
+- Ko-fi Shop: https://devicatoutlet.com/socials
+- RB Shop: https://devicatoutlet.redbubble.com
+- Socials: https://devicatoutlet.com/socials
 
