--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 nav:
 
 - DeviCat: https://devicatoutlet.com/about
-- CandiCat: https://devicatoutlet.com/about
+- CandiCat: https://devicatoutlet.com/candicat
 - Gallery: https://devicatoutlet.com/gallery
 - Ko-fi Shop: https://devicatoutlet.com/socials
 - RB Shop: https://devicatoutlet.redbubble.com
