--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ nav:
 - DeviCat: https://devicatoutlet.com/about
 - CandiCat: https://devicatoutlet.com/candicat
 - Gallery: https://devicatoutlet.com/gallery
-- Ko-fi Shop: https://devicatoutlet.com/socials
+- Ko-fi Shop: https://ko-fi.com/devicatoutlet
 - RB Shop: https://devicatoutlet.redbubble.com
 - Socials: https://devicatoutlet.com/socials
 
