Change Shop Name

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ nav:
 - DeviCat: https://devicatoutlet.com/about
 - CandiCat: https://devicatoutlet.com/candicat
 - Gallery: https://devicatoutlet.com/gallery
-- Ko-fi Shop: https://ko-fi.com/devicatoutlet
+- Shop: https://ko-fi.com/devicatoutlet
 - Socials: https://devicatoutlet.com/socials
 
