--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 nav:
 
-- DeviCat: https://devicatoutlet.com/about
-- CandiCat: https://devicatoutlet.com/candicat
-- Gallery: https://devicatoutlet.com/gallery
-- Ko-fi: https://ko-fi.com/devicatoutlet
-- Socials: https://devicatoutlet.com/socials
+- DeviCat: https://www.devicatoutlet.com/about
+- CandiCat: https://www.devicatoutlet.com/candicat
+- Gallery: https://www.devicatoutlet.com/gallery
+- Shop: https://www.ko-fi.com/devicatoutlet/shop
+- Socials: https://www.devicatoutlet.com/socials
 
