--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ nav:
 - DeviCat: https://www.devicatoutlet.com/about
 - CandiCat: https://www.devicatoutlet.com/candicat
 - Gallery: https://www.devicatoutlet.com/gallery
-- Shop: https://www.ko-fi.com/devicatoutlet/shop
+- Ko-fi: https://www.ko-fi.com/devicatoutlet/
+- RedBubble: https://www.devicatoutlet.redbubble.com
 - Socials: https://www.devicatoutlet.com/socials
 
