--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ nav:
 - CandiCat: https://www.devicatoutlet.com/candicat
 - Gallery: https://www.devicatoutlet.com/gallery
 - Ko-fi: https://www.ko-fi.com/devicatoutlet/
-- RedBubble: https://www.devicatoutlet.redbubble.com
+- RedBubble: https://www.redbubble.com/people/devicatoutlet/shop
 - Socials: https://www.devicatoutlet.com/socials
 
