Use relative links for local references

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 nav:
 
-- DeviCat: https://www.devicatoutlet.com/about
-- CandiCat: https://www.devicatoutlet.com/candicat
-- Gallery: https://www.devicatoutlet.com/gallery
+- DeviCat: about
+- CandiCat: candicat
+- Gallery: gallery
 - Ko-fi: https://www.ko-fi.com/devicatoutlet/
 - RedBubble: https://www.redbubble.com/people/devicatoutlet/shop
 - Socials: https://www.devicatoutlet.com/socials
