add newsletter page

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ nav:
 - Gallery: gallery
 - Ko-fi: https://www.ko-fi.com/devicatoutlet/
 - RedBubble: https://www.redbubble.com/people/devicatoutlet/shop
-
+- Newsletter: newsletter
