--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ nav:
 - DeviCat: about
 - CandiCat: candicat
 - Gallery: gallery
+- Discord: https://discord.com/invite/devicat
 - Ko-fi: https://www.ko-fi.com/devicatoutlet/
 - RedBubble: https://www.redbubble.com/people/devicatoutlet/shop
 - Newsletter: newsletter
