--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ nav:
 - CandiCat: candicat
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
-- Newsletter: newsletter
+- Ko-fi: https://ko-fi.com/devicatoutlet
+- RedBubble Shop: https://www.redbubble.com/people/devicatoutlet/shop
