--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ nav:
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
 - Ko-fi: https://ko-fi.com/devicatoutlet
-- RedBubble Shop: https://www.redbubble.com/people/devicatoutlet/shop
+- Shop: https://www.redbubble.com/people/devicatoutlet/shop
