--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,4 @@ nav:
 - CandiCat: candicat
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
-- Ko-fi: https://ko-fi.com/devicatoutlet
-- Shop: https://www.redbubble.com/people/devicatoutlet/shop
+- Newsletter: https://devicatoutlet.com/newsletter
