Switch newsletter to relative link

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ nav:
 - CandiCat: candicat
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
-- Newsletter: https://devicatoutlet.com/newsletter
+- Newsletter: newsletter
