Fix DeviCat link

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 nav:
 
-- DeviCat: about
+- DeviCat: devicat
 - CandiCat: candicat
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
