--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,7 @@ nav:
 - CandiCat: candicat
 - Gallery: gallery
 - Discord: https://discord.com/invite/devicat
+- Shop: 
+  - Fourthwall: https://devicat-shop.fourthwall.com
+  - Redbubble: https://devicatoutlet.redbubble.com
 - Newsletter: newsletter
