--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
+baseurl: ""
 nav:
-
-- DeviCat: devicat
-- CandiCat: candicat
-- Gallery: gallery
-- Discord: https://discord.com/invite/devicat
-- Newsletter: newsletter
-- Shop:
-  - Fourthwall: https://devicat-shop.fourthwall.com
-  - Redbubble: https://devicatoutlet.redbubble.com
+  - DeviCat: devicat
+  - CandiCat: candicat
+  - Gallery: gallery
+  - Blog: blog.html
+  - Discord: https://discord.com/invite/devicat
+  - Newsletter: newsletter
+  - Shop:
+      - Fourthwall: https://devicat-shop.fourthwall.com
+      - Redbubble: https://devicatoutlet.redbubble.com
