--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 baseurl: ""
 nav:
-  - DeviCat: devicat
-  - CandiCat: candicat
-  - Gallery: gallery
-  - Blog: blog.html
+  - DeviCat: "{{ site.baseurl }}/devicat"
+  - CandiCat: "{{ site.baseurl }}/candicat"
+  - Gallery: "{{ site.baseurl }}/gallery"
+  - Blog: "{{ site.baseurl }}/blog.html"
   - Discord: https://discord.com/invite/devicat
-  - Newsletter: newsletter
+  - Newsletter: "{{ site.baseurl }}/newsletter"
   - Shop:
       - Fourthwall: https://devicat-shop.fourthwall.com
       - Redbubble: https://devicatoutlet.redbubble.com
