change nav links to work on blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 baseurl: ""
 nav:
-  - DeviCat: devicat
-  - CandiCat: candicat
-  - Gallery: gallery
+  - DeviCat: /devicat
+  - CandiCat: /candicat
+  - Gallery: /gallery
   # - Blog: blog.html
   - Discord: https://discord.com/invite/devicat
-  - Newsletter: newsletter
+  - Newsletter: /newsletter
   - Shop:
       - Fourthwall: https://devicat-shop.fourthwall.com
       - Redbubble: https://devicatoutlet.redbubble.com
