add events and modeling page + change gallery to art

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,10 @@ baseurl: ""
 nav:
   - DeviCat: /devicat
   - CandiCat: /candicat
-  - Gallery: /gallery
+  - Portfolio:
+      - Art: /gallery
+      - Events: /events
+      - Modeling: /modeling
   - Blog: /blog.html
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
