Revert "Remove Modeling"
This reverts commit 88a1a4df4c31dbf50a55cd97d7b334124f19c240.

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ nav:
   - Portfolio:
       - Art: /gallery
       - Events: /events
+      - Modeling: /modeling
   - Blog: /blog.html
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
