--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 baseurl: ""
+# markdown: kramdown
+# kramdown:
+#   parse_block_html: true
+#   hard_wrap: false
 nav:
   - DeviCat: /devicat
   - CandiCat: /candicat
@@ -11,5 +15,4 @@ nav:
   - Shop:
       - Fourthwall: https://devicat-shop.fourthwall.com
       - Redbubble: https://devicatoutlet.redbubble.com
-
 excerpt_separator: <!--card-->
