--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,6 @@ nav:
   - Newsletter: /newsletter
   - Shop:
       - Fourthwall: https://devicat-shop.fourthwall.com
+      - Kofi: https://ko-fi.com/devicat/shop
       - Redbubble: https://devicatoutlet.redbubble.com
 excerpt_separator: <!--card-->
