Add kofishop to drop down

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ nav:
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
   - Shop:
+      - Kofi: https://ko-fi.com/devicat/shop
       - Fourthwall: https://devicat-shop.fourthwall.com
       - Redbubble: https://devicatoutlet.redbubble.com
 excerpt_separator: <!--card-->
