--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,6 @@ nav:
       - Events: /events
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
-  - Shop:
-      - Fourthwall: https://devicat-shop.fourthwall.com
-      - Redbubble: https://devicatoutlet.redbubble.com
+  - Shop: https://devicat-shop.fourthwall.com
+  
 excerpt_separator: <!--card-->
