Change menu to catalog

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ nav:
   - CandiCat: /candicat
   - Portfolio:
       - Art: /gallery
-      - Events: /events
+      - Catalog: /catalog
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
   - Shop: https://devicat-shop.fourthwall.com
