--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ nav:
   - Portfolio:
       - Art: /gallery
       - Catalog: /catalog
+  - Blog: /blog
   - Discord: https://discord.com/invite/devicat
   - Newsletter: /newsletter
   - Shop: https://devicat-shop.fourthwall.com
